--- a/stationESP/data/index.html
+++ b/stationESP/data/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript" src="static/index.js"></script>
+    <script type="text/javascript" src="/index.js"></script>
     <link   rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Orbitron' >
-    <link   type="text/css" rel="stylesheet" href="static/index.css">
+    <link   type="text/css" rel="stylesheet" href="/index.css">
     <title>MyFirstAppS</title>
 </head>
 <body>
